[package]
name = "solana-core"
description = "Blockchain, Rebuilt for Scale"
version = "1.8.14"
homepage = "https://solana.com/"
documentation = "https://docs.rs/solana-core"
readme = "../README.md"
repository = "https://github.com/solana-labs/solana"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
license = "Apache-2.0"
edition = "2018"

[badges]
codecov = { repository = "solana-labs/solana", branch = "master", service = "github" }

[dependencies]
ahash = "0.6.1"
base64 = "0.12.3"
bincode = "1.3.1"
blake3 = "0.3.7"
bv = { version = "0.11.1", features = ["serde"] }
bs58 = "0.3.1"
byteorder = "1.3.4"
chrono = { version = "0.4.11", features = ["serde"] }
crossbeam-channel = "0.4"
ed25519-dalek = "=1.0.1"
fs_extra = "1.2.0"
flate2 = "1.0"
indexmap = { version = "1.5", features = ["rayon"] }
libc = "0.2.81"
miow = "0.2.2"
net2 = "0.2.37"
num-traits = "0.2"
histogram = "0.6.9"
itertools = "0.10.1"
log = "0.4.14"
lru = "0.7.1"
rand = "0.7.0"
rand_chacha = "0.2.2"
rand_core = "0.6.2"
raptorq = "1.4.2"
rayon = "1.5.0"
retain_mut = "0.1.2"
serde = "1.0.122"
serde_bytes = "0.11"
serde_derive = "1.0.103"
solana-account-decoder = { git = "https://github.com/solindex/account-decoder", version = "=1.8.14" }
solana-accountsdb-plugin-manager = { git = "https://github.com/solindex/accountsdb-plugin-manager", version = "=1.8.14" }
solana-banks-server = { git = "https://github.com/solindex/banks-server", version = "=1.8.14" }
solana-clap-utils = { git = "https://github.com/solindex/clap-utils", version = "=1.8.14" }
solana-bloom = { git = "https://github.com/solindex/bloom", version = "=1.8.14" }
solana-client = { git = "https://github.com/solindex/client", version = "=1.8.14" }
solana-gossip = { git = "https://github.com/solindex/gossip", version = "=1.8.14" }
solana-ledger = { git = "https://github.com/solindex/ledger", version = "=1.8.14" }
solana-logger = { git = "https://github.com/solindex/logger", version = "=1.8.14" }
solana-merkle-tree = { git = "https://github.com/solindex/merkle-tree", version = "=1.8.14" }
solana-metrics = { git = "https://github.com/solindex/metrics", version = "=1.8.14" }
solana-measure = { git = "https://github.com/solindex/measure", version = "=1.8.14" }
solana-net-utils = { git = "https://github.com/solindex/net-utils", version = "=1.8.14" }
solana-perf = { git = "https://github.com/solindex/perf", version = "=1.8.14" }
solana-poh = { git = "https://github.com/solindex/poh", version = "=1.8.14" }
solana-program-test = { git = "https://github.com/solindex/program-test", version = "=1.8.14" }
solana-rpc = { git = "https://github.com/solindex/rpc", version = "=1.8.14" }
solana-runtime = { git = "https://github.com/solindex/runtime", version = "=1.8.14" }
solana-sdk = { git = "https://github.com/solindex/sdk", version = "=1.8.14" }
solana-frozen-abi = { git = "https://github.com/solindex/frozen-abi", version = "=1.8.14" }
solana-frozen-abi-macro = { git = "https://github.com/solindex/frozen-abi.git", version = "=1.8.14" }
solana-streamer = { git = "https://github.com/solindex/streamer.git", version = "=1.8.14" }
solana-transaction-status = { git = "https://github.com/solindex/transaction-status.git", version = "=1.8.14" }
solana-version = { git = "https://github.com/solindex/version.git", version = "=1.8.14" }
solana-vote-program = { git = "https://github.com/solindex/programs.git", version = "=1.8.14" }
spl-token-v2-0 = { package = "spl-token", version = "=3.2.0", features = ["no-entrypoint"] }
tempfile = "3.1.0"
thiserror = "1.0"
solana-rayon-threadlimit = { git = "https://github.com/solindex/rayon-threadlimit.git", version = "=1.8.14" }
sys-info = "0.9.1"
trees = "0.2.1"

[dev-dependencies]
jsonrpc-core = "18.0.0"
jsonrpc-core-client = { version = "18.0.0", features = ["ipc", "ws"] }
jsonrpc-derive = "18.0.0"
jsonrpc-pubsub = "18.0.0"
matches = "0.1.6"
num_cpus = "1.13.0"
reqwest = { version = "0.11.2", default-features = false, features = ["blocking", "rustls-tls", "json"] }
serde_json = "1.0.56"
serial_test = "0.4.0"
solana-stake-program = { git = "https://github.com/solindex/programs.git", version = "=1.8.14" }
solana-version = { git = "https://github.com/solindex/version.git", version = "=1.8.14" }
symlink = "0.1.0"
systemstat = "0.1.5"
tokio = { version = "1", features = ["full"] }

[build-dependencies]
rustc_version = "0.2"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]